infrastructure/bootstrap/namespace/messaging/namespace.yaml
apiVersion: v1
kind: Namespace


metadata:
  name: mrun-messaging
  labels:
    name: mrun-messaging
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
